set lora to attention

--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -46,7 +46,7 @@
         "outputId": "882e8ff1-2941-4fad-c333-d140dd82cf39"
       },
       "id": "8P8iWpw_6YRb",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "4598eee2",
       "metadata": {
         "id": "4598eee2"
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b789a0c2",
       "metadata": {
         "id": "b789a0c2"
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ebf52adb",
       "metadata": {
         "id": "ebf52adb"
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "b2c55ae4",
       "metadata": {
         "id": "b2c55ae4"
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7687ef06",
       "metadata": {
         "id": "7687ef06"
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ced74482",
       "metadata": {
         "id": "ced74482"
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "36a5d650",
       "metadata": {
         "id": "36a5d650"
@@ -302,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "6eb60851",
       "metadata": {
         "id": "6eb60851"
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "dc5c566b",
       "metadata": {
         "id": "dc5c566b"
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "dac38f18",
       "metadata": {
         "id": "dac38f18"
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "6d14a2f4",
       "metadata": {
         "id": "6d14a2f4"
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "5810fba9",
       "metadata": {
         "id": "5810fba9"
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "eda3d146",
       "metadata": {
         "id": "eda3d146"
@@ -376,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "91c72362",
       "metadata": {
         "id": "91c72362"
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "3c8faa9a",
       "metadata": {
         "id": "3c8faa9a"
@@ -452,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "8b5b4bcd",
       "metadata": {
         "id": "8b5b4bcd"
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "44ce57f5",
       "metadata": {
         "id": "44ce57f5"
@@ -476,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d3804066",
       "metadata": {
         "id": "d3804066"
@@ -488,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "6c2703ac",
       "metadata": {
         "id": "6c2703ac"
@@ -500,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "83499b73",
       "metadata": {
         "id": "83499b73"
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "51b3474a",
       "metadata": {
         "id": "51b3474a"
@@ -528,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820",
       "metadata": {
         "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820"
@@ -542,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4",
       "metadata": {
         "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4"
@@ -559,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "e23b182b",
       "metadata": {
         "id": "e23b182b"
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "54644c11-7de4-422c-93f8-9acb6118ec66",
       "metadata": {
         "id": "54644c11-7de4-422c-93f8-9acb6118ec66"
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456",
       "metadata": {
         "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456"
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "cf4f842a",
       "metadata": {
         "id": "cf4f842a"
@@ -631,7 +631,7 @@
         "id": "uQYoGKNXrezk"
       },
       "id": "uQYoGKNXrezk",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -643,12 +643,12 @@
         "id": "3YmlQ8OLrzdw"
       },
       "id": "3YmlQ8OLrzdw",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "e61de881",
       "metadata": {
         "id": "e61de881"
@@ -660,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "da478f8f",
       "metadata": {
         "colab": {
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "a69ce1a7",
       "metadata": {
         "id": "a69ce1a7"
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "e2bb3b6e",
       "metadata": {
         "id": "e2bb3b6e"
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "e88061ae",
       "metadata": {
         "id": "e88061ae"
@@ -787,12 +787,12 @@
         "id": "ruDRSmN3Ix6f"
       },
       "id": "ruDRSmN3Ix6f",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "89da212f",
       "metadata": {
         "id": "89da212f",
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "b474fe72",
       "metadata": {
         "id": "b474fe72",
@@ -850,7 +850,7 @@
         "id": "rRMWDSaoVt1I"
       },
       "id": "rRMWDSaoVt1I",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "3e92f8af",
       "metadata": {
         "id": "3e92f8af"
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "fb7f6534",
       "metadata": {
         "id": "fb7f6534",
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "38c8640c",
       "metadata": {
         "id": "38c8640c"
@@ -942,14 +942,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "949db024",
       "metadata": {
         "id": "949db024"
       },
       "outputs": [],
       "source": [
-        "loftq_config = LoftQConfig(loftq_bits=4,loftq_iter=100)"
+        "loftq_config = LoftQConfig(loftq_bits=4,loftq_iter=10)"
       ]
     },
     {
@@ -960,7 +960,7 @@
         "    loftq_config=loftq_config,\n",
         "    r=32,\n",
         "    lora_alpha=32,\n",
-        "    target_modules=\"all-linear\",\n",
+        "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\"],\n",
         "    lora_dropout=0.05,\n",
         "    bias=\"none\",\n",
         "    task_type=\"CAUSAL_LM\"\n",
@@ -970,7 +970,7 @@
         "id": "ETJ2Qrjc0WeH"
       },
       "id": "ETJ2Qrjc0WeH",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1018,7 +1018,7 @@
         "id": "XOa3NknE5Lld"
       },
       "id": "XOa3NknE5Lld",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1030,7 @@
         "id": "3yCVWGBa2EE-"
       },
       "id": "3yCVWGBa2EE-",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1042,7 +1042,7 @@
         "id": "c-RBrxAG3GJ8"
       },
       "id": "c-RBrxAG3GJ8",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1054,7 @@
         "id": "JOc20SvhJJtt"
       },
       "id": "JOc20SvhJJtt",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1083,7 +1083,7 @@
         "id": "fp0Z8HdR5PxE"
       },
       "id": "fp0Z8HdR5PxE",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1095,7 +1095,7 @@
         "id": "5rZ8eHhdA90N"
       },
       "id": "5rZ8eHhdA90N",
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
