cuda empty_cache

--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8P8iWpw_6YRb",
-        "outputId": "38a1cdc9-dddb-42bb-9bb2-7b77d25fcc70"
+        "outputId": "1aaf1d6a-b00c-4325-e520-d0951c17bbe5"
       },
       "outputs": [
         {
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ced74482",
-        "outputId": "df883efe-bfda-4a0f-8064-bdac04ba004a"
+        "outputId": "3338c8ad-d48e-4dd1-d274-855071e261cf"
       },
       "outputs": [
         {
@@ -731,7 +731,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "da478f8f",
-        "outputId": "918602e4-7612-40ca-bc58-1e528f01b8a0"
+        "outputId": "b2de492f-07c3-4c0c-912f-5656bacef83d"
       },
       "outputs": [
         {
@@ -1006,7 +1006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 36,
       "id": "38c8640c",
       "metadata": {
         "id": "38c8640c"
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 37,
       "id": "949db024",
       "metadata": {
         "id": "949db024"
@@ -1030,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 38,
       "id": "ETJ2Qrjc0WeH",
       "metadata": {
         "id": "ETJ2Qrjc0WeH"
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 39,
       "id": "de45243c-5bf1-45f6-accb-82319023794c",
       "metadata": {
         "id": "de45243c-5bf1-45f6-accb-82319023794c"
@@ -1352,12 +1352,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "nAeg-QF2Bgxf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 159
         },
         "id": "nAeg-QF2Bgxf",
         "outputId": "bf5090b2-f498-4112-cbaa-9090deddefe7"
@@ -1373,8 +1373,8 @@
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='6898' max='8536' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [6898/8536 3:47:12 < 53:58, 0.51 it/s, Epoch 0.81/1]\n",
+              "      <progress value='8536' max='8536' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [8536/8536 4:51:10, Epoch 0/1]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -1385,11 +1385,26 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>0</td>\n",
+              "      <td>1.600000</td>\n",
+              "      <td>1.564415</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=8536, training_loss=1.6866278456211536, metrics={'train_runtime': 17472.7441, 'train_samples_per_second': 1.954, 'train_steps_per_second': 0.489, 'total_flos': 3.791342739338035e+16, 'train_loss': 1.6866278456211536, 'epoch': 1.0})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ],
       "source": [
@@ -1398,7 +1413,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        " model_saved = f\"best-{model_name}-finetuned-lora\""
+      ],
+      "metadata": {
+        "id": "dfvltZPOdR2D"
+      },
+      "id": "dfvltZPOdR2D",
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save_pretrained(model_saved)"
+      ],
+      "metadata": {
+        "id": "vNeQjJiSc4UB"
+      },
+      "id": "vNeQjJiSc4UB",
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
       "id": "fefc49a4-da32-4dae-bc91-0d209ac2015d",
       "metadata": {
         "id": "fefc49a4-da32-4dae-bc91-0d209ac2015d"
@@ -1422,7 +1461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "16e7dbe9-cf68-4d6b-8c4b-ef4608652157",
       "metadata": {
         "id": "16e7dbe9-cf68-4d6b-8c4b-ef4608652157"
@@ -1434,31 +1473,152 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "id": "031c10e7",
       "metadata": {
         "id": "031c10e7"
       },
       "outputs": [],
       "source": [
-        "model = AutoPeftModelForCausalLM.from_pretrained(f\"{model_name}-finetuned-lora\", config=lora_config, device_map=\"auto\")"
+        "model = AutoPeftModelForCausalLM.from_pretrained(model_saved, config=lora_config, device_map=\"auto\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "3ebd553d",
       "metadata": {
-        "id": "3ebd553d"
+        "id": "3ebd553d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4f75282-94e0-4549-b30c-ca5003717fca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PeftModelForCausalLM(\n",
+              "  (base_model): LoraModel(\n",
+              "    (model): OPTForCausalLM(\n",
+              "      (model): OPTModel(\n",
+              "        (decoder): OPTDecoder(\n",
+              "          (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+              "          (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+              "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "          (layers): ModuleList(\n",
+              "            (0-11): 12 x OPTDecoderLayer(\n",
+              "              (self_attn): OPTAttention(\n",
+              "                (k_proj): lora.Linear(\n",
+              "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+              "                  (lora_dropout): ModuleDict(\n",
+              "                    (default): Dropout(p=0.01, inplace=False)\n",
+              "                  )\n",
+              "                  (lora_A): ModuleDict(\n",
+              "                    (default): Linear(in_features=768, out_features=32, bias=False)\n",
+              "                  )\n",
+              "                  (lora_B): ModuleDict(\n",
+              "                    (default): Linear(in_features=32, out_features=768, bias=False)\n",
+              "                  )\n",
+              "                  (lora_embedding_A): ParameterDict()\n",
+              "                  (lora_embedding_B): ParameterDict()\n",
+              "                )\n",
+              "                (v_proj): lora.Linear(\n",
+              "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+              "                  (lora_dropout): ModuleDict(\n",
+              "                    (default): Dropout(p=0.01, inplace=False)\n",
+              "                  )\n",
+              "                  (lora_A): ModuleDict(\n",
+              "                    (default): Linear(in_features=768, out_features=32, bias=False)\n",
+              "                  )\n",
+              "                  (lora_B): ModuleDict(\n",
+              "                    (default): Linear(in_features=32, out_features=768, bias=False)\n",
+              "                  )\n",
+              "                  (lora_embedding_A): ParameterDict()\n",
+              "                  (lora_embedding_B): ParameterDict()\n",
+              "                )\n",
+              "                (q_proj): lora.Linear(\n",
+              "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+              "                  (lora_dropout): ModuleDict(\n",
+              "                    (default): Dropout(p=0.01, inplace=False)\n",
+              "                  )\n",
+              "                  (lora_A): ModuleDict(\n",
+              "                    (default): Linear(in_features=768, out_features=32, bias=False)\n",
+              "                  )\n",
+              "                  (lora_B): ModuleDict(\n",
+              "                    (default): Linear(in_features=32, out_features=768, bias=False)\n",
+              "                  )\n",
+              "                  (lora_embedding_A): ParameterDict()\n",
+              "                  (lora_embedding_B): ParameterDict()\n",
+              "                )\n",
+              "                (out_proj): lora.Linear(\n",
+              "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+              "                  (lora_dropout): ModuleDict(\n",
+              "                    (default): Dropout(p=0.01, inplace=False)\n",
+              "                  )\n",
+              "                  (lora_A): ModuleDict(\n",
+              "                    (default): Linear(in_features=768, out_features=32, bias=False)\n",
+              "                  )\n",
+              "                  (lora_B): ModuleDict(\n",
+              "                    (default): Linear(in_features=32, out_features=768, bias=False)\n",
+              "                  )\n",
+              "                  (lora_embedding_A): ParameterDict()\n",
+              "                  (lora_embedding_B): ParameterDict()\n",
+              "                )\n",
+              "              )\n",
+              "              (activation_fn): ReLU()\n",
+              "              (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "              (fc1): lora.Linear(\n",
+              "                (base_layer): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "                (lora_dropout): ModuleDict(\n",
+              "                  (default): Dropout(p=0.01, inplace=False)\n",
+              "                )\n",
+              "                (lora_A): ModuleDict(\n",
+              "                  (default): Linear(in_features=768, out_features=32, bias=False)\n",
+              "                )\n",
+              "                (lora_B): ModuleDict(\n",
+              "                  (default): Linear(in_features=32, out_features=3072, bias=False)\n",
+              "                )\n",
+              "                (lora_embedding_A): ParameterDict()\n",
+              "                (lora_embedding_B): ParameterDict()\n",
+              "              )\n",
+              "              (fc2): lora.Linear(\n",
+              "                (base_layer): Linear(in_features=3072, out_features=768, bias=True)\n",
+              "                (lora_dropout): ModuleDict(\n",
+              "                  (default): Dropout(p=0.01, inplace=False)\n",
+              "                )\n",
+              "                (lora_A): ModuleDict(\n",
+              "                  (default): Linear(in_features=3072, out_features=32, bias=False)\n",
+              "                )\n",
+              "                (lora_B): ModuleDict(\n",
+              "                  (default): Linear(in_features=32, out_features=768, bias=False)\n",
+              "                )\n",
+              "                (lora_embedding_A): ParameterDict()\n",
+              "                (lora_embedding_B): ParameterDict()\n",
+              "              )\n",
+              "              (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "            )\n",
+              "          )\n",
+              "        )\n",
+              "      )\n",
+              "      (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+              "    )\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ],
       "source": [
         "model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "8b58ba20-c528-4a18-afa5-40b868e9df79",
       "metadata": {
         "id": "8b58ba20-c528-4a18-afa5-40b868e9df79"
@@ -1470,24 +1630,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "cfb5a17f-6db4-4ab2-ba8b-e1e9efc5ad69",
       "metadata": {
-        "id": "cfb5a17f-6db4-4ab2-ba8b-e1e9efc5ad69"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cfb5a17f-6db4-4ab2-ba8b-e1e9efc5ad69",
+        "outputId": "ea293e93-5d3c-4b50-f3f4-f204d541aabb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OPTForCausalLM(\n",
+              "  (model): OPTModel(\n",
+              "    (decoder): OPTDecoder(\n",
+              "      (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+              "      (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+              "      (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "      (layers): ModuleList(\n",
+              "        (0-11): 12 x OPTDecoderLayer(\n",
+              "          (self_attn): OPTAttention(\n",
+              "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+              "          )\n",
+              "          (activation_fn): ReLU()\n",
+              "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+              "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "        )\n",
+              "      )\n",
+              "    )\n",
+              "  )\n",
+              "  (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ],
       "source": [
         "model"
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "batch_size=8"
+      ],
+      "metadata": {
+        "id": "H0NKE9eQgIt1"
+      },
+      "id": "H0NKE9eQgIt1",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "a0132683-8f71-44fb-840f-0e604354a33c",
       "metadata": {
-        "id": "a0132683-8f71-44fb-840f-0e604354a33c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a0132683-8f71-44fb-840f-0e604354a33c",
+        "outputId": "da5be471-26aa-463c-ba21-451155f806a6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "312it [10:48,  2.07s/it]"
+          ]
+        }
+      ],
       "source": [
         "base_score=evaluate(model,test_ds,batch_size)"
       ]
@@ -1503,6 +1726,18 @@
       "source": [
         "base_score"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.cuda.empty_cache()"
+      ],
+      "metadata": {
+        "id": "JPf7HLjLkPuT"
+      },
+      "id": "JPf7HLjLkPuT",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
